# Murmer

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  FEATURE_TESTING_CHECKLIST.md  README.md  SCREEN_SHARE_FEATURE.md  TODO.md  UI_MODERNIZATION_COMPLETE.md  docker-compose.yml  package-lock.json  rust-toolchain.toml
.github/: dependabot.yml  description.md
.github/workflows/: build-client.yml  ci.yml  deploy.yml  release.yml
Murmer/: AGENTS.md  package-lock.json  package.json  vite.config.js
Murmer/src-tauri/: Cargo.toml  tauri.conf.json
Murmer/src-tauri/icons/: icon.icns
Murmer/src-tauri/src/: lib.rs  main.rs
Murmer/src/lib/components/: PingDot.svelte  SettingsModal.svelte
Murmer/src/lib/stores/: chat.ts  online.ts  ping.ts  servers.ts  session.ts
Murmer/src/routes/: +layout.svelte
Murmer/src/routes/chat/: +page.svelte
docs/: chat-commands.md  manual-test-checklist.md  todo-code-comparison.md  ui-modernization.md
docs/adr/: 0001-security-hardening.md
murmer_client/: AGENTS.md  DESIGN_NOTES.md  README.md  UI_DESIGN_SYSTEM.md  UI_MODERNIZATION_SUMMARY.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
murmer_client/scripts/: bump-version.mjs  migrate-runes.mjs  run-tauri.js
murmer_client/src/: app.html
murmer_client/src-tauri/: Cargo.toml  tauri.conf.json
murmer_client/src-tauri/capabilities/: default.json
murmer_client/src-tauri/icons/: icon.icns
murmer_client/src-tauri/src/: lib.rs  main.rs
murmer_client/src/lib/: dm-crypto.ts  emoji.ts  errors.ts  invite.ts  keypair.ts  link-preview.ts  markdown.ts  message-utils.ts  notify.ts  server-url.ts  types.ts  utils.ts  version.ts  websocket-manager.ts
murmer_client/src/lib/chat/: constants.ts  helpers.ts  permissions.ts
murmer_client/src/lib/components/: ChannelPermissionsModal.svelte  ConnectionBars.svelte  ConnectionStatsPanel.svelte  ContextMenu.svelte  DialogHost.svelte  EmojiPicker.svelte  HelpOverlay.svelte  LinkPreview.svelte  MurmerLogo.svelte  PingDot.svelte  ScreenShareControls.svelte  ScreenShareViewer.svelte  SearchOverlay.svelte  ServerDashboardModal.svelte  SettingsModal.svelte  StatusDot.svelte  ThemeWheel.svelte  UserAvatar.svelte  UserStatsModal.svelte  UserStatsPanel.svelte  VolumeMenu.svelte
murmer_client/src/lib/components/chat/: ChannelSidebar.svelte  ChatHeader.svelte  ConnectionOverlay.svelte  ConversationPanel.svelte  MessageComposer.svelte  MessageItem.svelte  PinnedBar.svelte  UserList.svelte
murmer_client/src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  IconButton.svelte  Spinner.svelte  Tooltip.svelte  index.ts
murmer_client/src/lib/components/wiki/: WikiEditor.svelte  WikiView.svelte
murmer_client/src/lib/screenshare/: manager.ts
murmer_client/src/lib/stats/: achievements.ts
murmer_client/src/lib/stores/: avatars.ts  categories.ts  channelNotifications.ts  channelOverrides.ts  channelTopics.ts  channels.ts  chat.ts  connection.ts  connectionStats.ts  customEmojis.ts  dialogs.ts  dm.ts  globalHotkeys.ts  hotkeys.ts  layout.ts  online.ts  peerKeys.ts  permissions.ts  ping.ts  pins.ts  roleDefinitions.ts  roles.ts  screenShare.ts  serverIdentity.ts  serverInfo.ts  serverStatus.ts  servers.ts  session.ts  settings.ts  stats.ts  status.ts  theme.ts  thread.ts  typing.ts  unread.ts  users.ts  voice.ts  voiceChannels.ts  voiceMute.ts  voicePermissions.ts  (+3 more)
murmer_client/src/lib/voice/: manager.ts  ptt.ts  vad.ts
murmer_client/src/lib/wiki/: links.ts  slug.ts
murmer_client/src/routes/: +layout.svelte  +page.svelte
murmer_client/src/routes/chat/: +page.svelte
murmer_client/src/routes/login/: +page.svelte
murmer_client/src/routes/servers/: +page.svelte
murmer_client/src/routes/settings/: +page.svelte
murmer_server/: .dockerignore  .env.example  AGENTS.md  BOT_API.md  Cargo.toml  Dockerfile  README.md
murmer_server/migrations/: 001_init.sql
murmer_server/src/: admin.rs  auth.rs  channel_overrides.rs  config.rs  db.rs  history.rs  lib.rs  link_preview.rs  main.rs  permissions.rs  roles.rs  security.rs  upload.rs  ws.rs
murmer_server/src/bot/: db.rs  mod.rs  models.rs  routes.rs
murmer_server/src/db/: channel_overrides.rs  channels.rs  direct_messages.rs  emojis.rs  identity.rs  messages.rs  mod.rs  moderation.rs  pins.rs  reactions.rs  roles.rs  screenshare.rs  stats.rs  users.rs  wiki.rs
murmer_server/src/ws/: constants.rs  errors.rs  handlers.rs  helpers.rs  mod.rs  validation.rs
murmer_server/src/ws/handlers/: auth.rs  channel_overrides.rs  channels.rs  dms.rs  emojis.rs  identity.rs  messages.rs  mod.rs  moderation.rs  pins.rs  profile.rs  roles.rs  screenshare.rs  stats.rs  wiki.rs
murmer_server/tests/: avatars_test.rs  bot_api_test.rs  channel_order_test.rs  channel_overrides_test.rs  dms_test.rs  emojis_test.rs  ephemeral_test.rs  moderation_test.rs  permission_resolution_test.rs  replies_test.rs  roles_db_test.rs  roles_test.rs  search_test.rs  security_limits.rs  stats_test.rs  user_keys_test.rs
