[package]
name = "murmer_server"
version = "2025.7.12-alpha.1"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
hyper = "1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
argon2 = "0.5"
jsonwebtoken = "9"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
rand = "0.8"
async-trait = "0.1"
