[package]
name = "murmer_server"
version = "2025.7.24-alpha.2"
edition = "2024"
resolver = "2"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
hyper = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1", features = ["log"] }
futures = "0.3"
tokio-postgres = "0.7"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-full", "set-header"] }
ed25519-dalek = "2"
base64 = "0.22"
axum-extra = { version = "0.9", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
sanitize-filename = "0.6"
subtle = "2.6"
anyhow = "1"
dotenvy = "0.15"
tower = "0.5"

[dev-dependencies]
serial_test = "3"
temp-env = "0.3"
