[package]
name = "murmer_server"
version = "2026.3.10-alpha.1"
edition = "2021"
resolver = "2"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
hyper = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1", features = ["log"] }
futures = "0.3"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tower-http = { version = "0.7", features = ["fs", "cors", "trace", "compression-full", "set-header"] }
ed25519-dalek = "3"
base64 = "0.22"
axum-extra = { version = "0.12", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
sanitize-filename = "0.6"
subtle = "2.6"
anyhow = "1"
dotenvy = "0.15"
tower = "0.5"
rand = "0.10.0"
sha2 = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }

[dev-dependencies]
serial_test = "3"
temp-env = "0.3"
